Fixed the navbar z-index issue

--- a/CSS/Gallery.css
+++ b/CSS/Gallery.css
@@ -1,3 +1,6 @@
+nav{
+  z-index: 100;
+}
 .footer {
   background-color: #3a3a3a;
   color: #d1d1d1;
