--- a/CSS/about.css
+++ b/CSS/about.css
@@ -1,3 +1,6 @@
+nav{
+    z-index: 100;
+}
 #scrollToTopBtn {
     position: fixed;
     bottom: 20px;
